syntax = "proto3";

import "google/protobuf/timestamp.proto";


message game{
    float game_id = 1;
    google.protobuf.Timestamp game_date = 2;
    
    bool starter = 3;
    int32 team_id = 4;
    string team_name = 11;
    bool home = 5;
    int32 minutes_played = 6;

    float elo = 7;
    float k = 8;
    int32 goal_difference = 9;
    float opp_average_elo = 10;

}
message playerProto{
    int32 player_id = 1;
    string player_name = 2;
    google.protobuf.Timestamp born = 3;
    repeated game game = 4;
}